--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,8 +64,8 @@ img {
 }
 
 .iconbox {
-    width: 60px;
-    height: 60px;
+    width: 100%;
+    height: 80px; /* Increased height for larger icons */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -73,6 +73,44 @@ img {
     background-color: var(--color-brand);
     color: var(--color-base);
 }
+
+.iconbox-wrapper {
+    flex: 0 0 16.6667%;
+    max-width: 16.6667%;
+    padding: 10px;
+  }
+
+  .iconbox i {
+    font-size: 3rem; /* Increased icon size */
+  }
+
+  @media (max-width: 1200px) {
+    .iconbox-wrapper {
+      flex: 0 0 20%;
+      max-width: 20%;
+    }
+  }
+
+  @media (max-width: 992px) {
+    .iconbox-wrapper {
+      flex: 0 0 25%;
+      max-width: 25%;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .iconbox-wrapper {
+      flex: 0 0 33.3333%;
+      max-width: 33.3333%;
+    }
+  }
+
+  @media (max-width: 576px) {
+    .iconbox-wrapper {
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+  }
 
 /* NAVBAR */
 .navbar {
